<resources>
    <string name="app_name">CampoBarba</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="hintemail">Digite seu email</string>
    <string name="hintsenha">Digite sua senha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintnome">Digite seu nome</string>
    <string name="hinttelefone">Digite seu telefone</string>

</resources>